# tree-sitter-hlsl

./: .gitmodules  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  update-cpp-parser.yml
bindings/c/: tree-sitter-hlsl.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_import.py
bindings/python/tree_sitter_hlsl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHlsl/: hlsl.h
bindings/swift/TreeSitterHlslTests/: TreeSitterHlslTests.swift
src/: grammar.json  node-types.json  scanner.c  scanner.cc
test/corpus/: basic.txt
