[package]
name = "tree-sitter-hlsl"
description = "HLSL grammar for the tree-sitter parsing library"
version = "0.1.4"
keywords = ["incremental", "parsing", "hlsl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/theHamsta/tree-sitter-hlsl"
edition = "2021"
license = "MIT"
authors = ["tree-sitter-c authors around Max Brunsfeld", "Stephan Seitz"]

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0.73"
